compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__records__private_unused_records.snap
---
source: compiler-core/src/erlang/tests/records.rs
expression: "type A { A(inner: Int) }\ntype B { B(String) }\ntype C { C(Int) }\n\npub fn main(x: Int) -> Int {\n  let a = A(x)\n  a.inner\n}\n"
---
----- SOURCE CODE
type A { A(inner: Int) }
type B { B(String) }
type C { C(Int) }

pub fn main(x: Int) -> Int {
  let a = A(x)
  a.inner
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/1]).
-export_type([a/0, b/0, c/0]).

-type a() :: {a, integer()}.

-type b() :: {b, binary()}.

-type c() :: {c, integer()}.

-file("project/test/my/mod.gleam", 5).
-spec main(integer()) -> integer().
main(X) ->
    A = {a, X},
erlang:element(2, A).
