compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__records__record_spread1.snap
---
source: compiler-core/src/erlang/tests/records.rs
expression: "\npub type Triple {\n  Triple(a: Int, b: Int, c: Int)\n}\n\npub fn main() {\n  let triple = Triple(1,2,3)\n  let Triple(b: the_b, ..) = triple\n  the_b\n}\n"
---
----- SOURCE CODE

pub type Triple {
  Triple(a: Int, b: Int, c: Int)
}

pub fn main() {
  let triple = Triple(1,2,3)
  let Triple(b: the_b, ..) = triple
  the_b
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).
-export_type([triple/0]).

-type triple() :: {triple, integer(), integer(), integer()}.

-file("project/test/my/mod.gleam", 6).
-spec main() -> integer().
main() ->
    Triple = {triple, 1, 2, 3},
{triple, _, The_b, _} = Triple,
The_b.
