compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__records__record_updates1.snap
---
source: compiler-core/src/erlang/tests/records.rs
expression: "\npub type Person { Person(name: String, age: Int) }\n\npub fn main() {\n    let p = Person(\"Quinn\", 27)\n    let new_p = Person(..p, age: p.age + 1)\n    new_p\n}\n"
---
----- SOURCE CODE

pub type Person { Person(name: String, age: Int) }

pub fn main() {
    let p = Person("Quinn", 27)
    let new_p = Person(..p, age: p.age + 1)
    new_p
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).
-export_type([person/0]).

-type person() :: {person, binary(), integer()}.

-file("project/test/my/mod.gleam", 4).
-spec main() -> person().
main() ->
    P = {person, <<"Quinn"/utf8>>, 27},
New_p = {person, erlang:element(2, P), erlang:element(3, P) + 1},
New_p.
